--- a/client/src/components/Navbar/styles.scss
+++ b/client/src/components/Navbar/styles.scss
@@ -1,24 +1,26 @@
+@import '../../styles/colors.scss';
+
 .navigation {
   position: fixed;
   top: 0;
   left: 0;
   width: 100%;
   height: 40px;
-  background-color: #084970;
+  background-color: $app-primary;
+  color: $app-secondary;
   display: flex;
   justify-content: flex-end;
   z-index: 100;
 
   &__link {
-    color: white;
+    color: $app-secondary;
     align-self: center;
     font-weight: 200;
     font-family: 'montserrat';
     margin-right: 20px;
 
     &:hover {
-      color: #deebff;
-      text-decoration: none;
+      text-decoration: underline;
     }
 
     &--active {
