--- a/client/src/pages/Boards/styles.scss
+++ b/client/src/pages/Boards/styles.scss
@@ -1,22 +1,21 @@
 .board-page {
-  width: 100%;
-  height: calc(100vh - 40px);
+  height: calc(100% - 40px);
   position: relative;
   top: 40px;
-  padding: 25px 0;
+  padding: 0 50px;
+  overflow: auto;
 
   &__header {
-    width: 80%;
-    margin: 0 auto;
     display: flex;
     justify-content: space-between;
     align-items: center;
+    margin: 30px 0 20px;
 
     &-title {
       color: #fdbd56;
-      margin-left: 5px;
-      font-weight: 700;
+      font-weight: 900;
       font-family: "montserrat";
+      text-transform: uppercase;
     }
   }
 
@@ -24,10 +23,10 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: flex-start;
-
+    
     & > * {
-      margin-left: 30px;
-      margin-bottom: 30px;
+      margin-bottom: 20px;
+      margin-right: 20px;
     }
   }
 
